--- a/applications/frontend/package.json
+++ b/applications/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.6",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.7",
     "next": "14.2.15",
     "react": "^18",
