--- a/applications/frontend/package.json
+++ b/applications/frontend/package.json
@@ -18,6 +18,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@clerk/nextjs": "^4.0.0",
+    "@vercel/analytics": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
