--- a/applications/backend/package.json
+++ b/applications/backend/package.json
@@ -23,8 +23,10 @@
     "@nestjs/common": "^10.4.7",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@elastic/elasticsearch": "^8.16.2",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.4.5",
     "mongoose": "^8.8.1",
     "reflect-metadata": "^0.2.0",
