adding default clerk public key

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   frontend:
     runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_CLERK_PUBLIC_KEY: default-mock-public-key
 
     steps:
       - name: Checkout code
