--- a/applications/backend/package.json
+++ b/applications/backend/package.json
@@ -20,10 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.16.2",
     "@nestjs/common": "^10.4.7",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
-    "@elastic/elasticsearch": "^8.16.2",
+    "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "class-validator": "^0.14.0",
